--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,8 @@
 .App {
-  text-align: center;
+  border-radius: 1rem;
+  box-shadow: rgba(0, 0, 0, 0.60) 0px 5px 45px;
+  margin-left:500px;
+  max-width:900px;
 }
 
 .App-logo {
@@ -13,16 +16,6 @@
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
 
 .App-link {
   color: #61dafb;
