--- a/src/components/css/Search.css
+++ b/src/components/css/Search.css
@@ -1,14 +1,15 @@
 .Search {
     display: flex;
-    margin-left: 500px;
+    /* margin-left: 20px; */
     margin-top: 100px;
+    margin-left: -150px;;
   }
   
   .input {
     margin-top: 100px;
-    width: 500px;
+    width: 700px;
     margin: 10px 200px;
-    padding: 10px;
+    padding: 12px;
     height: 40px;
     border-radius: 5px;
     font-size: 15px;
