--- a/src/components/css/sunrise.css
+++ b/src/components/css/sunrise.css
@@ -1,36 +1,31 @@
 .sun{
     display:flex;
+    
     gap:400px;
-    font-size: 26px;
-    font-weight:bold; 
-    margin-right: -50px;
-    margin-left: 10px;;
 }
-.sun10{
-    display:flex;
-    gap:300px;
-    font-size: 26px;
-    font-weight:bold; 
-    margin-right: -50px;
-    margin-left: 10px;;
-}
-/* .sun1{
+.sun1{
     font-size: 26px;
     font-weight:bold; 
     margin-right: -50px;
     background-color:lightblue;
     margin-left: 100px;;
 }
-
+.sun1:hover{
+       
+       
+}
 .sun2{
     font-size: 28px; 
     font-weight:bold;
     background-color:lightblue; 
 }
-
+.sun2:hover{
+   
+   
+}
 .sun5{
     display:flex;
-   
+    /* margin-left: 700px; */
     gap:430px;
     
     
@@ -49,4 +44,4 @@
     background-color:lightblue;
    margin-right: 190px;
 }
- */
+
